# personal-infrastructure

./: .gitignore  Makefile  README.md  pyproject.toml
misc/: ssh_keys
playbooks/: .ansible-lint  ansible.cfg  lustinfr-bootstrap.yml  lustinfr.yml
playbooks/group_vars/: all
playbooks/host_vars/: lustinfr
playbooks/macros/: nginx_proxy_pass.j2  systemd_user_service.j2
playbooks/roles/common/certbot/defaults/: main.yml
playbooks/roles/common/certbot/tasks/: Ubuntu.yml  main.yml
playbooks/roles/common/nginx/files/: dhparams  nginx.conf
playbooks/roles/common/security/tasks/: main.yml
playbooks/roles/lustinfr/atrema/tasks/: main.yml
playbooks/roles/lustinfr/atrema/templates/: atrema.conf.j2  git-post-receive-hook.j2
playbooks/roles/lustinfr/page/tasks/: main.yml
playbooks/roles/lustinfr/page/templates/: git-post-receive-hook.j2  page.conf.j2
playbooks/roles/lustinfr/setup/tasks/: main.yml
terraform/aws/: .terraform.lock.hcl  main.tf
terraform/ovh/: .terraform.lock.hcl  main.tf
terraform/scaleway/: .terraform.lock.hcl  main.tf  output.tf
