[tool.poetry]
name = "personal-infrastructure"
version = "0.1.0"
description = "Personal infrastructure management project"
authors = ["Raphaël Lustin <raphael@lustin.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
